Fixed interpolation of newly spawned trail segments