@@ -1,22 +1,15 @@
 package it.hurts.octostudios.octolib.modules.particles.trail;
 
 import com.mojang.blaze3d.vertex.PoseStack;
-import com.mojang.blaze3d.vertex.VertexConsumer;
 import it.hurts.octostudios.octolib.modules.particles.OctoRenderManager;
 import it.hurts.octostudios.octolib.modules.particles.RenderProvider;
 import it.hurts.octostudios.octolib.util.ColorUtils;
 import it.hurts.octostudios.octolib.util.TesselatorUtils;
 import it.hurts.octostudios.octolib.util.VectorUtils;
-import net.fabricmc.loader.impl.lib.sat4j.core.Vec;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.multiplayer.ClientLevel;
-import net.minecraft.client.renderer.LevelRenderer;
 import net.minecraft.client.renderer.MultiBufferSource;
-import net.minecraft.client.renderer.RenderType;
-import net.minecraft.util.Mth;
-import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
-import org.joml.Matrix4f;
 
 import java.awt.*;
 import java.util.ArrayList;
@@ -24,76 +17,86 @@ import java.util.List;
 import java.util.Objects;
 
 import static it.hurts.octostudios.octolib.util.TesselatorUtils.TRAIL_RENDER_TYPE;
-import static it.hurts.octostudios.octolib.util.VectorUtils.X_VEC;
 import static it.hurts.octostudios.octolib.util.VectorUtils.Y_VEC;
 
 public interface TrailProvider extends RenderProvider<TrailProvider, TrailBuffer> {
-    
+    @Override
     default TrailBuffer createBuffer() {
-        return new DefaultTrailBuffer(getTrailMaxLength());
+        var length = getTrailMaxLength();
+        var pos = getTrailPosition(0);
+
+        var buffer = new DefaultTrailBuffer(length);
+
+        for (int i = 0; i < length; i++)
+            buffer.write(pos);
+
+        return buffer;
     }
-    
+
     @Override
     default boolean shouldRender(TrailBuffer buffer) {
         return isTrailAlive() || (!disappearAfterDeath() && buffer.size() != 0);
     }
-    
+
     @Override
     default Vec3 getRenderPosition(float partialTick) {
         return getTrailPosition(partialTick);
     }
-    
+
     Vec3 getTrailPosition(float partialTick);
-    
+
     @Override
     @Deprecated
     default double getRenderDistance() {
         return getTrailRenderDistance();
     }
-    
+
     default double getTrailRenderDistance() {
         return 64;
     }
-    
+
     @Override
     @Deprecated
     default int getUpdateFrequency() {
         return getTrailUpdateFrequency();
     }
-    
+
     int getTrailUpdateFrequency();
-    
+
     boolean isTrailAlive();
-    
+
     default boolean isTrailGrowing() {
         return true;
     }
-    
+
     default boolean disappearAfterDeath() {
         return false;
     }
-    
+
     int getTrailMaxLength();
-    
+
     int getTrailFadeInColor();
-    
+
     int getTrailFadeOutColor();
-    
+
     double getTrailScale();
-    
+
     default int getTrailInterpolationPoints() {
         return 1;
     }
-    
+
     default List<Vec3> getTrailRenderPositions(List<Vec3> points, float pTicks) {
-        if (points.size() < 3) return points;
-        List<Vec3> interpolated = new ArrayList<>(List.of(points.get(0)));
-        for (int i = 1; i < points.size()-2; i++) {
-            interpolated.add(points.get(i+1).lerp(points.get(i), pTicks));
-        }
+        if (points.size() < 3)
+            return points;
+
+        var interpolated = new ArrayList<>(List.of(points.getFirst()));
+
+        for (int i = 1; i < points.size() - 2; i++)
+            interpolated.add(points.get(i + 1).lerp(points.get(i), pTicks));
+
         return interpolated;
     }
-    
+
     @Override
     @Deprecated
     default void render(float pTicks, PoseStack poseStack, MultiBufferSource bufferSourceList) {
@@ -175,11 +178,11 @@ public interface TrailProvider extends RenderProvider<TrailProvider, TrailBuffer
 
             var perpendicular1 = vec1n.cross(Y_VEC).normalize();
 
-            var scale = getTrailScale() * (1.0 - (double) i / (partialPoses.size() - 1))+0.005;
+            var scale = getTrailScale() * (1.0 - (double) i / (partialPoses.size() - 1)) + 0.005;
 
             crossVecs[i - 1][0] = perpendicular1.scale(scale);
-            crossVecs[i - 1][1] = VectorUtils.rotate(crossVecs[i-1][0], vec1n, 120);
-            crossVecs[i - 1][2] = VectorUtils.rotate(crossVecs[i-1][0], vec1n, -120);
+            crossVecs[i - 1][1] = VectorUtils.rotate(crossVecs[i - 1][0], vec1n, 120);
+            crossVecs[i - 1][2] = VectorUtils.rotate(crossVecs[i - 1][0], vec1n, -120);
         }
 
         var color1 = new Color(getTrailFadeInColor(), true);
@@ -231,5 +234,4 @@ public interface TrailProvider extends RenderProvider<TrailProvider, TrailBuffer
 
         poseStack.popPose();
     }
-    
 }
